# RustyJam

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/logic/: Cargo.toml
crates/logic/src/: lib.rs
crates/native/: Cargo.toml
src/: main.rs
web/: index.html
